crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__headers-id-whitespace.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Participant",
            "speaker_code": "PAR"
          },
          {
            "name": null,
            "role": "Investigator",
            "speaker_code": "INV"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "43;",
        "corpus": "corpus",
        "custom_field": "73.9",
        "group": "Broca",
        "language": [
          "eng"
        ],
        "role": "Participant",
        "sex": "male",
        "speaker": "PAR",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Investigator",
        "speaker": "INV",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "@ID header with trailing whitespace in custom field.",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: id_header with trailing space in 10th field,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "field whitespace trimming",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "hello",
              "content": [
                {
                  "content": "hello",
                  "type": "text"
                }
              ],
              "raw_text": "hello",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "PAR"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "hello",
              "content": [
                {
                  "content": "hello",
                  "type": "text"
                }
              ],
              "raw_text": "hello",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "INV"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "INV": {
      "birth_date": null,
      "code": "INV",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Investigator",
        "speaker": "INV"
      },
      "name": null,
      "role": "Investigator"
    },
    "PAR": {
      "birth_date": null,
      "code": "PAR",
      "id": {
        "age": "43;",
        "corpus": "corpus",
        "custom_field": "73.9",
        "group": "Broca",
        "language": [
          "eng"
        ],
        "role": "Participant",
        "sex": "male",
        "speaker": "PAR"
      },
      "name": null,
      "role": "Participant"
    }
  }
}
