crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__headers-media-url.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;00.",
        "corpus": "sample",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "sample",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "\"https://media.talkbank.org/example/sample.mp3\"",
        "media_type": "audio",
        "status": "missing",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Media header with remote URL filename, audio type, and missing status",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: media_header, media_contents, media_filename, media_type,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "media_status, audio_value, missing_value",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "can",
              "content": [
                {
                  "content": "can",
                  "type": "text"
                }
              ],
              "raw_text": "can",
              "type": "word"
            },
            {
              "cleaned_text": "hear",
              "content": [
                {
                  "content": "hear",
                  "type": "text"
                }
              ],
              "raw_text": "hear",
              "type": "word"
            },
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "music",
              "content": [
                {
                  "content": "music",
                  "type": "text"
                }
              ],
              "raw_text": "music",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "yes",
              "content": [
                {
                  "content": "yes",
                  "type": "text"
                }
              ],
              "raw_text": "yes",
              "type": "word"
            },
            {
              "cleaned_text": "that",
              "content": [
                {
                  "content": "that",
                  "type": "text"
                }
              ],
              "raw_text": "that",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "cleaned_text": "a",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "type": "word"
            },
            {
              "cleaned_text": "nice",
              "content": [
                {
                  "content": "nice",
                  "type": "text"
                }
              ],
              "raw_text": "nice",
              "type": "word"
            },
            {
              "cleaned_text": "song",
              "content": [
                {
                  "content": "song",
                  "type": "text"
                }
              ],
              "raw_text": "song",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "media": {
    "filename": "\"https://media.talkbank.org/example/sample.mp3\"",
    "media_type": "audio",
    "status": "missing"
  },
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;00.",
        "corpus": "sample",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "sample",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
