crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__headers-metadata.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;06.15",
        "corpus": "MacWhinney",
        "group": "TD",
        "language": [
          "eng"
        ],
        "role": "Child",
        "sex": "male",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "MacWhinney",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "28-JUL-2001",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "location": "Pittsburgh, PA",
        "type": "location"
      },
      "line_type": "header"
    },
    {
      "header": {
        "text": "Free play in the living room with blocks and dolls",
        "type": "situation"
      },
      "line_type": "header"
    },
    {
      "header": {
        "activities": "block play, doll play",
        "type": "activities"
      },
      "line_type": "header"
    },
    {
      "header": {
        "transcriber": "chris harris, mike jackson",
        "type": "transcriber"
      },
      "line_type": "header"
    },
    {
      "header": {
        "transcription": "eye_dialect",
        "type": "transcription"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Metadata headers: @Date, @Location, @Situation, @Activities,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "@Transcriber, @Transcription",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: date_header, location_header, situation_header,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "activities_header, transcriber_header, transcription_header",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "look",
              "content": [
                {
                  "content": "look",
                  "type": "text"
                }
              ],
              "raw_text": "look",
              "type": "word"
            },
            {
              "cleaned_text": "at",
              "content": [
                {
                  "content": "at",
                  "type": "text"
                }
              ],
              "raw_text": "at",
              "type": "word"
            },
            {
              "cleaned_text": "my",
              "content": [
                {
                  "content": "my",
                  "type": "text"
                }
              ],
              "raw_text": "my",
              "type": "word"
            },
            {
              "cleaned_text": "tower",
              "content": [
                {
                  "content": "tower",
                  "type": "text"
                }
              ],
              "raw_text": "tower",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "that",
              "content": [
                {
                  "content": "that",
                  "type": "text"
                }
              ],
              "raw_text": "that",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "cleaned_text": "a",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "type": "word"
            },
            {
              "cleaned_text": "big",
              "content": [
                {
                  "content": "big",
                  "type": "text"
                }
              ],
              "raw_text": "big",
              "type": "word"
            },
            {
              "cleaned_text": "tower",
              "content": [
                {
                  "content": "tower",
                  "type": "text"
                }
              ],
              "raw_text": "tower",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "it",
              "content": [
                {
                  "content": "it",
                  "type": "text"
                }
              ],
              "raw_text": "it",
              "type": "word"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "cleaned_text": "going",
              "content": [
                {
                  "content": "going",
                  "type": "text"
                }
              ],
              "raw_text": "going",
              "type": "word"
            },
            {
              "cleaned_text": "to",
              "content": [
                {
                  "content": "to",
                  "type": "text"
                }
              ],
              "raw_text": "to",
              "type": "word"
            },
            {
              "cleaned_text": "fall",
              "content": [
                {
                  "content": "fall",
                  "type": "text"
                }
              ],
              "raw_text": "fall",
              "type": "word"
            },
            {
              "cleaned_text": "down",
              "content": [
                {
                  "content": "down",
                  "type": "text"
                }
              ],
              "raw_text": "down",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "exclamation"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;06.15",
        "corpus": "MacWhinney",
        "group": "TD",
        "language": [
          "eng"
        ],
        "role": "Child",
        "sex": "male",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "MacWhinney",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
